Fix contact page and footer section

--- a/css/app.css
+++ b/css/app.css
@@ -25,14 +25,9 @@
     text-align: center;
 }
 
-
-#cab-menu
-{
-    border: 1px solid black;
-}
-
 #cab-menu ul
 {
+    margin-left: 5%;
     font-size: 130%;
 }
 
@@ -70,28 +65,25 @@
 .article-content
 {
     height: 66em;
-    border: 3px dashed black;
 }
 
 .article-content .article1
 {
     width: 100%;
     color: black;
-    border: 2px solid red;
 }
 
 .article-content .article2
 {
     width: 100%;
     background-color: #990082;
-    border: 2px solid red;
 }
 
 .articles
 {
-    padding-left: 1em;
     padding-top: 2em;
-    border: 3px solid yellow;
+    padding-left: 2.5%; padding-right: 2.5%;
+    text-align: center;
 }
 
 .articles h2
@@ -104,7 +96,8 @@
 {
     font-size: 80%;
     font-family: Comic Sans MS;
-    width: 18em;
+    width: 100%;
+    
 }
 
 .article2
@@ -126,6 +119,34 @@
     height: 230px;
 }
 
+footer .contact-div h1{ font-size: 16pt; }
+footer .contact-div{
+    margin-top: 20px;
+}
+footer .contact-div #div-icons .c-icon{ width: 25px; height: 25px; margin-left: 35px; cursor: pointer; }
+footer .contact-div span{ margin-left: 40%; }
+
+@media screen and (min-width: 25em)
+{
+    #cab-menu ul{ margin-left: 20%; }
+    .articles{ padding-left: 2.5%; padding-right: 2.5%; }
+    .article2 #div-img{ padding-left: 40%; }
+
+    footer .contact-div h1{ font-size: 18pt; }
+    footer .contact-div #div-icons .c-icon{ width: 30px; height: 30px; margin-left: 65px; }
+    footer .contact-div span{ margin-left: 45%; }
+
+}
+
+@media screen and (min-width: 37em)
+{
+    #cab-menu ul{ margin-left: 25%; }
+    .article2 #div-img{ padding-left: 50%; }
+    footer .contact-div h1{ font-size: 20pt; }
+    footer .contact-div #div-icons .c-icon{ margin-left: 85px; }
+    footer .contact-div span{ margin-left: 50%; }
+}
+
 /* Medium only */
 @media screen and (min-width: 40em)
 {
@@ -139,7 +160,6 @@
 
     #cab-menu
     {
-        border: 1px solid black;
         padding-top: 3.5em;
         padding-left: 1em;
     }
@@ -184,14 +204,12 @@
     .article-content
     {
         height: 45em;
-        border: 3px dashed black;
     }
 
     .articles
     {
         padding-left: 1em;
         padding-top: 1em;
-        border: 3px solid yellow;
     }
 
     .articles h2
@@ -204,7 +222,7 @@
     {
         font-size: 12pt;
         font-family: Comic Sans MS;
-        width: 22em;
+        width: 100%;
     }
 
     .article2 p
@@ -216,11 +234,18 @@
         font-family: Comic Sans MS;
     }
 
+    .article2 #div-img{ padding-left: 0; }
+
     .article2 div img
     {
         width: 234px;
         height: 234px;
     }
+
+    footer .contact-div{ margin-top: 30px; }
+    footer .contact-div h1{ font-size: 25pt; }
+    footer .contact-div #div-icons .c-icon{ width: 40px; height: 40px; margin-left: 145px; }
+    footer .contact-div span{ margin-left: 50%; }
 }
 
 
@@ -229,7 +254,6 @@
 {
     #cab-logo h1
     {
-        float: center;
         font-size: 22pt;
         padding-left: 5em;
     }
@@ -279,14 +303,12 @@
     .article-content
     {
         height: 40em;
-        border: 3px dashed black;
     }
 
     .articles
     {
         padding-left: 2em;
         padding-top: 2em;
-        border: 3px solid yellow;
     }
 
     .articles h2
@@ -299,7 +321,7 @@
     {
         font-size: 14pt;
         font-family: Comic Sans MS;
-        width: 25em;
+        width: 100%;
     }
 
     .article2 p
@@ -316,4 +338,8 @@
         width: 334px;
         height: 334px;
     }
+
+    footer .contact-div h1{ font-size: 25pt; }
+    footer .contact-div #div-icons .c-icon{ width: 40px; height: 40px; margin-left: 240px; margin-bottom: 20px; }
+    footer .contact-div span{ margin-left: 50%;}
 }
