--- a/css/contact.css
+++ b/css/contact.css
@@ -5,5 +5,67 @@
 
 .form-content
 {
-    height: 40em;
+	margin-top: 2em;
+    height: 20em;
+}
+
+.form-content form textarea{ resize: none; }
+.form-content form #btnSubmit{ margin-left: 40%; }
+
+footer .contact-div h1{ font-size: 16pt; }
+footer .contact-div{
+    margin-top: 20px;
+}
+footer .contact-div #div-icons .c-icon{ width: 25px; height: 25px; margin-left: 35px; cursor: pointer; }
+footer .contact-div span{ margin-left: 40%; }
+
+@media screen and (min-width: 25em)
+{
+	.cabecalho
+	{
+	    height: 10em;
+	}
+
+
+	footer .contact-div h1{ font-size: 18pt; }
+    footer .contact-div #div-icons .c-icon{ width: 30px; height: 30px; margin-left: 65px; }
+    footer .contact-div span{ margin-left: 45%; }
+}
+
+@media screen and (min-width: 37em)
+{
+	footer .contact-div h1{ font-size: 20pt; }
+    footer .contact-div #div-icons .c-icon{ margin-left: 85px; }
+    footer .contact-div span{ margin-left: 50%; }
+}
+
+/* Medium only */
+@media screen and (min-width: 40em)
+{
+
+	.form-content form{
+		margin-left: 25%;
+		box-shadow: 0 2px 3px black;
+		padding: 5px;
+	}
+
+	footer .contact-div{ margin-top: 30px; }
+    footer .contact-div h1{ font-size: 25pt; }
+    footer .contact-div #div-icons .c-icon{ width: 40px; height: 40px; margin-left: 145px; }
+    footer .contact-div span{ margin-left: 50%; }
+}
+
+/* Large and up */
+@media screen and (min-width: 64em)
+{
+	#cab-logo h1
+    {
+    	font-size: 28pt;
+    }
+
+	.form-content form #btnSubmit{ margin-left: 45%; }
+
+	footer .contact-div h1{ font-size: 25pt; }
+    footer .contact-div #div-icons .c-icon{ width: 40px; height: 40px; margin-left: 240px; margin-bottom: 20px; }
+    footer .contact-div span{ margin-left: 50%;}
 }
